--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
 	}
 }
 
@@ -14,6 +15,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
+apply plugin: 'jacoco'
+apply plugin: 'org.sonarqube'
 
 war {
 	baseName = 'blog-api'
@@ -34,4 +37,33 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.yaml:snakeyaml:1.17')
+	testCompile 'org.testng:testng:6.10'
+    testCompile 'com.mashape.unirest:unirest-java:1.4.9'
+    testCompile('org.mockito:mockito-core:2.6.8')
+    
+}
+
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+    reportsDir = file("$buildDir/jacoco/test.exec")
+}
+
+jacocoTestReport {
+    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+    reports {
+        html.destination "${buildDir}/jacoco/html"
+    }
+}
+
+test {
+
+    useTestNG() {
+        suites 'src/test/resources/test-configure.yaml'
+    }
+
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/test.exec")
+        classDumpFile = file("$buildDir/build/classes/test")
+    }
 }
