--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,2 @@
-language: java
-
-os:
-  - linux
-
-branches:
-  only:
-    - blog-api
-
-cache:
-  directories:
-  - $HOME/.gradle
-
-before_script:
-  - git fetch
-  - git checkout -b gh-pages
-  - git merge origin/blog-api
-  - git rm --cached --ignore-unmatch index.html
-
-script:
-  - ./gradlew clean publish -i --continue
-  - ./gradlew -b finalize.gradle finalize -i
-
-after_script:
-  - git add .
-  # something@example.com
-  - git config user.email "${GIT_EMAIL}"
-  # First Last
-  - git config user.name "${GIT_NAME}"
-  - git commit -m "updating outputs"
-  # https://${GH_TOKEN}@github.com/asciidoctor/asciidoctor-gradle-examples.git
-  - git push -f "${GIT_URL}" gh-pages > /dev/null 2>&1
+language : java
+./gradlew check
