--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
 apply plugin: 'jacoco'
-
+apply plugin: 'org.sonarqube'
 
 war {
 	baseName = 'blog-api'
 	version = '1.0.0'
 }
 
-
+sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
